Fix snippet layout positions on Firefox

--- a/app/static/components/snippetbar/snippetbar.less
+++ b/app/static/components/snippetbar/snippetbar.less
@@ -57,6 +57,9 @@
         #rightSnippetBar li#snippetColIcon a span {
             margin-top:-2px;
         }
+            .browser-firefox #rightSnippetBar li#snippetColIcon a span {
+                margin-top:-1px;
+            }
             #rightSnippetBar li a span.active {
                 color:@icon-color-active;
             }
