--- a/app/static/components/snippetpanel/snippetpanel.less
+++ b/app/static/components/snippetpanel/snippetpanel.less
@@ -101,6 +101,17 @@
                         .snippetPopup .layout.snippetDelete span {
                             margin-top:-2px;
                         }
+                        .browser-firefox .snippetPopup .layout.snippetColLayout span {
+                            margin-top:-2px;
+                        }
+                        .browser-firefox .snippetPopup .layout.snippetRowLayout span,
+                        .browser-firefox .snippetPopup .layout.snippetTitleOnlyLayout span,
+                        .browser-firefox .snippetPopup .layout.snippetEdit span {
+                            margin-top:-1px;
+                        }
+                        .browser-firefox .snippetPopup .layout.snippetDelete span {
+                            margin-top:-3px;
+                        }
 
             .snippetTitle {
             }
